[gd_scene load_steps=8 format=3 uid="uid://dpepq22x802u0"]

[ext_resource type="Texture2D" uid="uid://dxk2uqgm5rvv4" path="res://Free/Background/Green.png" id="1_4idgd"]
[ext_resource type="Texture2D" uid="uid://cx73o4wqi4vlq" path="res://Free/Terrain/Terrain (16x16).png" id="2_7o5at"]
[ext_resource type="Script" uid="uid://bl10vpmsvkbgj" path="res://Options.gd" id="3_5ibd0"]

[sub_resource type="FontVariation" id="FontVariation_aajw1"]

[sub_resource type="LabelSettings" id="LabelSettings_h01tc"]
font = SubResource("FontVariation_aajw1")
font_size = 52
font_color = Color(0.713686, 0.282674, 0, 1)
shadow_size = 12

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t1nsn"]
texture = ExtResource("2_7o5at")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.08264, -6.99355, -6.99356, 8, 8, 8, 8, -7.08264)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.99356, 8, -6.99355, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.99356, 7.08264, -7.08264, 6.90446, 8, -8, 8)
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_d3mbl"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_t1nsn")

[node name="OptionMenu" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.997
offset_bottom = -0.0560303
texture = ExtResource("1_4idgd")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.283
anchor_top = 0.054
anchor_right = 0.714
anchor_bottom = 0.367
offset_left = -0.0160217
offset_top = 0.00799942
offset_right = 0.471924
offset_bottom = 0.18399
text = "Options du jeu
"
label_settings = SubResource("LabelSettings_h01tc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.238
anchor_top = 0.383
anchor_right = 0.766
anchor_bottom = 0.818
offset_left = -0.175995
offset_top = -0.184006
offset_right = 0.567993
offset_bottom = -0.0640259

[node name="DifficultGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Difficult√© du jeu : 0"
script = ExtResource("3_5ibd0")

[node name="MusicOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Musique : Off"

[node name="RetourButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Retour"

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_d3mbl")
format = 2
layer_0/tile_data = PackedInt32Array(786459, 458752, 0, 851995, 458752, 1, 786460, 393216, 0, 851996, 393216, 1, 786461, 458752, 0, 851997, 458752, 1, 786462, 393216, 0, 851998, 393216, 1, 786463, 458752, 0, 851999, 458752, 1, 786464, 393216, 0, 852000, 393216, 1, 786465, 458752, 0, 852001, 458752, 1, 786466, 393216, 0, 852002, 393216, 1, 786467, 458752, 0, 852003, 458752, 1, 786432, 393216, 0, 851968, 393216, 1, 917504, 393216, 2, 786433, 458752, 0, 851969, 458752, 1, 917505, 458752, 2, 786434, 524288, 0, 851970, 524288, 1, 917506, 524288, 2, 786435, 393216, 0, 851971, 393216, 1, 917507, 393216, 2, 786436, 458752, 0, 851972, 458752, 1, 917508, 458752, 2, 786437, 524288, 0, 851973, 524288, 1, 917509, 524288, 2, 786438, 393216, 0, 851974, 393216, 1, 917510, 393216, 2, 786439, 458752, 0, 851975, 458752, 1, 917511, 458752, 2, 786440, 524288, 0, 851976, 524288, 1, 917512, 524288, 2, 786441, 393216, 0, 851977, 393216, 1, 917513, 393216, 2, 786442, 458752, 0, 851978, 458752, 1, 917514, 458752, 2, 786443, 524288, 0, 851979, 524288, 1, 917515, 524288, 2, 786444, 393216, 0, 851980, 393216, 1, 917516, 393216, 2, 786445, 458752, 0, 851981, 458752, 1, 917517, 458752, 2, 786446, 524288, 0, 851982, 524288, 1, 917518, 524288, 2, 786447, 393216, 0, 851983, 393216, 1, 917519, 393216, 2, 786448, 458752, 0, 851984, 458752, 1, 917520, 458752, 2, 786449, 524288, 0, 851985, 524288, 1, 917521, 524288, 2, 786450, 393216, 0, 851986, 393216, 1, 917522, 393216, 2, 786451, 458752, 0, 851987, 458752, 1, 917523, 458752, 2, 786452, 524288, 0, 851988, 524288, 1, 917524, 524288, 2, 786453, 393216, 0, 851989, 393216, 1, 917525, 393216, 2, 786454, 458752, 0, 851990, 458752, 1, 917526, 458752, 2, 786455, 524288, 0, 851991, 524288, 1, 917527, 524288, 2, 786456, 393216, 0, 851992, 393216, 1, 917528, 393216, 2, 786457, 458752, 0, 851993, 458752, 1, 917529, 458752, 2, 786458, 524288, 0, 851994, 524288, 1, 917530, 524288, 2, 1245208, 393216, 0, 1310744, 393216, 1, 1376280, 393216, 2, 1245209, 458752, 0, 1310745, 458752, 1, 1376281, 458752, 2, 1245210, 524288, 0, 1310746, 524288, 1, 1376282, 524288, 2)

[connection signal="pressed" from="VBoxContainer/DifficultGame" to="VBoxContainer/DifficultGame" method="_on_DifficultGame_pressed"]
[connection signal="pressed" from="VBoxContainer/MusicOptions" to="VBoxContainer/DifficultGame" method="_on_Music_pressed"]
[connection signal="pressed" from="VBoxContainer/RetourButton" to="VBoxContainer/DifficultGame" method="_on_Retour_pressed"]
